# nisit-voice

./: Cargo.toml  diesel.toml
.github/workflows/: rust.yml
src/: main.rs
src/application/use_cases/: mod.rs  nisits.rs  nisits_authentication.rs  report_assignment.rs  report_dashboard.rs  report_log.rs  report_ops.rs  staff.rs  staff_authentication.rs
src/config/: config_loader.rs  config_model.rs  stage.rs
src/domain/entities/: mod.rs  nisits.rs  reports.rs  staff.rs
src/domain/repositories/: mod.rs  nisits.rs  report_assignment.rs  report_dashboard.rs  report_log.rs  report_ops.rs  staff.rs
src/domain/value_objects/: board_checking_filter.rs  mod.rs  nisit_model.rs  report_model.rs  report_staff_junction.rs  report_status.rs  staff_model.rs
src/infrastructure/argon2_hashing/: mod.rs
src/infrastructure/axum_http/: http_serve.rs  mod.rs
src/infrastructure/axum_http/routers/: mod.rs  nisits.rs  nisits_authentication.rs  report_assignment.rs  report_dashboard.rs  report_log.rs  report_ops.rs  staff.rs  staff_authentication.rs
src/infrastructure/postgres/: postgres_connection.rs  schema.rs
src/infrastructure/postgres/migrations/2025-04-26-102914_init_database/: down.sql  up.sql
src/infrastructure/postgres/migrations/2025-04-26-155900_init/: up.sql
src/infrastructure/postgres/repositories/: mod.rs  nisits.rs  report_assignment.rs  report_dashboard.rs  report_log.rs  report_ops.rs  staff.rs
